2012-03-16  Paolo Bonzini  <bonzini@gnu.org>

	* testsuite/version.gin: Regenerate.

2012-03-16  Paolo Bonzini  <bonzini@gnu.org>

	* basicdefs.h (P_): Remove.
	* sed/compile.c: Adjust.
	* sed/execute.c: Likewise.
	* sed/fmt.c: Likewise.
	* sed/sed.c: Likewise.
	* sed/sed.h: Likewise.
	* sed/utils.c: Likewise.
	* sed/utils.h: Likewise.

2012-03-16  Paolo Bonzini  <bonzini@gnu.org>

	* basicdefs.h (FREE): Remove.
	* sed/compile.c: Adjust.
	* sed/execute.c: Adjust.
	* sed/regexp.c: Adjust.
	* sed/utils.c: Adjust, remove ck_free.
	* sed/utils.h: Adjust, remove ck_free.

2012-03-16  Paolo Bonzini  <bonzini@gnu.org>

	* basicdefs.h (CAST, VCAST, VOID, MEMCPY, MEMMOVE): Rip out.
	* sed/compile.c: Adjust.
	* sed/execute.c: Adjust.
	* sed/regexp.c: Adjust.
	* sed/utils.c: Adjust.
	* sed/utils.h: Adjust.

2012-03-16  Paolo Bonzini  <bonzini@gnu.org>

	* sed/execute.c: Unconditionally compile for MBCS.
	* sed/mbcs.c: Unconditionally compile for MBCS.
	* sed/sed.h: Unconditionally compile for MBCS.

2012-03-16  Paolo Bonzini  <bonzini@gnu.org>

	* basicdefs.h: Enjoy gnulib's headers.
	* sed/compile.c: Likewise.
	* sed/execute.c: Likewise.
	* sed/regexp.c: Likewise.
	* sed/sed.c: Likewise.
	* sed/sed.h: Likewise.
	* sed/utils.c: Likewise.

2012-03-16  Paolo Bonzini  <bonzini@gnu.org>

	* bootstrap.sh.in: Remove.
	* bootstrap.sh: Remove.
	* configure.ac: Do not create bootstrap.sh.
	* basicdefs.h: Remove guards.
	* sed/execute.c [BOOTSTRAP]: Remove guards.
	* sed/sed.c [BOOTSTRAP]: Remove guards.
	* sed/sed.h [BOOTSTRAP]: Remove guards.

2012-03-16  Paolo Bonzini  <bonzini@gnu.org>

	* gnulib: Update.

2012-03-16  Paolo Bonzini  <bonzini@gnu.org>

	* doc/sed.x: Document address behavior across input files.
	* doc/sed.1: Regenerate.

2012-02-13  Paolo Bonzini  <bonzini@gnu.org>

	* configure.ac: Test whether fopen("foo", "rt") works.
	* sed/compile.c: Do not open scripts with "rt" mode if it doesn't.
	* sed/sed.c: Never open input files with "rt" mode.
