@@ -24,7 +24,7 @@ SEDTESTS += \
 	fasts uniq manis khadafy linecnt eval distrib 8to7 y-bracket \
 	y-newline allsub cv-vars classes middle bsd stdin flipcase \
 	insens subwrite writeout readin insert utf8-1 utf8-2 utf8-3 utf8-4 \
-	badenc inplace-hold brackets \
+	badenc inplace-hold brackets amp-escape \
 	help version file quiet \
 	factor binary3 binary2 binary dc
 
@@ -39,6 +39,7 @@ EXTRA_DIST = \
 	8bit.good 8bit.inp 8bit.sed \
 	8to7.good 8to7.inp 8to7.sed \
 	allsub.good allsub.inp allsub.sed \
+	amp-escape.good amp-escape.inp amp-escape.sed \
 	appquit.good appquit.inp appquit.sed \
 	binary.good binary.inp binary.sed binary2.sed binary3.sed \
 	bkslashes.good bkslashes.inp bkslashes.sed \
